<resources>
    <string name="app_name">Guper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Guper</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="datos">Datos Personales</string>
    <string name="nombres">Nombres:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="Telefono">Telefono:</string>
    <string name="FechaDN">Fecha de nacimiento:</string>
    <string name="Sexo">Sexo:</string>
    <string name="Email">E-mail:</string>
    <string name="contraseña">Contraseña:</string>
    <string name="hecho">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="fecha">Fecha:</string>
    <string name="Documento">Documento:</string>
    <string name="Instructor">Instructor:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="configuracion"> Configuracion de Perfil </string>
    <string name="cambiarImagen"> Cambiar Imagen </string>

</resources>
